--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,48 @@
-.App {
-  text-align: center;
-}
+/* CSS 코드 (컴파일된 SCSS) */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@keyframes drop-down {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
   }
 }
+.drop-animation {
+  animation: drop-down 1s ease-in-out forwards;
+}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
+  width: 100px;
+  height: 100px;
+  background-color: #3498db;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.container {
+  height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  
+}
+
+.btn {
+  padding: 10px 20px;
+  background-color: #2ecc71;
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn:hover {
+  background-color: #3498db;
 }
